# emotion-in-political-language

./: .gitignore  README.md  pyproject.toml
scripts/: data_exploration.ipynb  data_preprocess.py  gpt_batch.py  model_pairwise_labels.py  model_predict.py  model_score.py  model_train_classifier.py  paper_plots.ipynb  prediction.py  preprocess.py  train_classifier.py
src/emotion/: utils.py
